--- a/.projectConfig.json
+++ b/.projectConfig.json
@@ -1,1 +1,1 @@
-{"ignoredFilesOrFolders":[],"openFiles":["enhancementOfIplDashboardApp/.gitignore"],"fileToBeOpened":"enhancementOfIplDashboardApp/.eslintrc"}
+{"ignoredFilesOrFolders":[],"openFiles":["enhancementOfIplDashboardApp/src/components/Home/index.js","enhancementOfIplDashboardApp/src/components/TeamCard/index.js","enhancementOfIplDashboardApp/src/components/TeamCard/index.css","enhancementOfIplDashboardApp/.eslintrc"],"fileToBeOpened":"enhancementOfIplDashboardApp/.gitignore"}
